# tms_v0.0.9

./: .env  .flake8  base.py  base_middleware.py  db.sqlite3  main.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_customuser_document_number.py
audit/: admin.py  models.py  urls.py  views.py
audit/migrations/: 0001_initial.py
core/: admin.py  mixins.py  models.py  urls.py  utils.py  views.py
fleet/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
fleet/migrations/: 0001_initial.py  0002_alter_vehiclebrand_name.py  0003_alter_vehicle_brand.py  0004_alter_vehicle_brand_alter_vehiclebrand_name.py  0005_vehicle_photo.py  0006_vehicleassignment_daily_rate_and_more.py  0007_alter_vehicleassignmentworkday_daily_rate.py  0008_alter_vehicle_capacity_m3_or_liters.py
personnel/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
personnel/migrations/: 0001_initial.py  0002_employee_payment_method_alter_employee_payment_cycle.py  0003_alter_employee_birth_date.py
static/css/: base.css  custom.css  fleet-professional.css  footer.css  header.css  login.css  navbar.css  signup.css
static/js/: jquery.mask.min.js
staticfiles/css/: base.css  header.css  home.css  navbar.css
templates/: base.html  dashboard.html  home.html  old-base.html
tenants/: admin.py  apps.py  context_processors.py  decorators.py  middleware.py  models.py  routers.py  signals.py  urls.py  views.py
tms/: settings.py  urls.py  views.py
(+58 files in other folders)
