[project]
name = "tms-v0-0-9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-cors-headers==4.3.1",
    "djangorestframework>=3.14.0",
    "django-tenants>=3.9.0",
    "flake8>=7.3.0",
    "langchain>=0.3.27",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "streamlit>=1.49.1",
]
